# foxhole-events-api

./: .gitignore  README.md  alembic.ini  app.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 2024_01_15_1951-d0dff453752b_initialize.py
app/: main.py  models.py  tasks.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: region.py  war.py
app/core/: config.py
app/crud/: __init__.py  crud_region.py  crud_war.py
app/db/: engine.py  init_db.py
app/db/fixtures/: regions.yaml
app/schemas/: region.py
src/: api.py  app.py  crud.py  db.py  models.py  schemas.py  settings.py  tasks.py
stockpile/: api.py  models.py
towns/: api.py  models.py  tasks.py  warapi.py
warapi/: tasks.py  warapi.py
