[tool.poetry]
name = "14els-bot-backend"
version = "0.1.0"
description = ""
authors = ["Vincent Letarouilly <vincent.letarouilly@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
blinker = "1.7.0"
click = "8.1.7"
flask = "3.0.0"
flask-openapi3 = "3.0.1"
importlib-metadata = "7.0.1"
itsdangerous = "2.1.2"
jinja2 = "3.1.2"
markupsafe = "2.1.3"
pydantic = ">=2.4"
typing-extensions = "4.9.0"
werkzeug = "3.0.1"
zipp = "3.17.0"
celery = ">=5.3.4,<5.4.0"
numpy = "^1.26.2"
requests = "^2.31.0"
flask-caching = "^2.1.0"
redis = "^5.0.1"
foxhole-warapi-client = "1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
