[tool.poetry]
name = "14els-bot-backend"
version = "0.1.0"
description = ""
authors = ["Vincent Letarouilly <vincent.letarouilly@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
celery = ">=5.3.4,<5.4.0"
redis = "^5.0.1"
foxhole-warapi-client = "1.0.0"
uvicorn = "^0.25.0"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
requests = "^2.31.0"
psycopg2 = "^2.9.9"
sqlmodel = "^0.0.14"
pyyaml = "^6.0.1"
tenacity = "^8.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
